# cuda_drill

gemm/: gemm.cu
reduce/: reduce.cu
softmax/: softmax.cu
transpose/: CMakeLists.txt  bench_pytorch.py  build.sh  transpose.cu  transpose.cuh
